1999-12-21  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* scheduler/scheduler.h, scheduler/transport.c:
	    Report at reclaim() to scheduler main error log if subprogram
	    has returned with non-zero exit status.

	* scheduler/agenda.c, scheduler/threads.c, scheduler/prototypes.h:
	    Moved  QUEUE_ONLY  flag observation inside the  thread_start().

	* scheduler/scheduler.c:
	    Timeserver waking up on select() every circa 0.3 seconds.
	    (Goal is to have *some* reliability at getting a bit more
	     accurate 1 second tick..)

	* scheduler/threads.c:
	    Fixed  'thr->attempts' accounting, threw away a pile of
	    dead (#if 0 ... #endif) code.
	
1999-12-20  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* scheduler/transport.c:
	    Inverted flush_child() return code - to work like specified..

	* scheduler/update.c, scheduler/scheduler.h, scheduler/threads.c,
	  scheduler/transport.c, scheduler/conf.c, scheduler/prototypes.h:
	    More tracking of referrals thru freed memory blocks,
	    and various core logic cleanups.

	* libc/getaddrinfo.c:
	    Include wrapper test fix

1999-12-19  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* scheduler/scheduler.c:
	    Wondered why (at Solaris) the system doesn't run with
	    timeserver process.  Possible fix implemented. (SFIO
	    usage mistake.)

	* scheduler/threads.c:
	    Spotted the final lurking thread-auto-switch bug -- "ho"
	    and "ch" pointers at proc object were not updated at the
	    rewritten  pick_next_thread()  function.

	* transports/smtp/smtp.c:
	    Spotted aplenty of suboptimal diagnostic() calls, and
	    guarded them with   if (rp->lockoffset)  tests.  After
	    a diagnostic is done, that variable is zero.

	* transports/smtp/smtp.c:
	    Consider DNS originating NONAME/NODATA errors to be fatal.
	    (until we again spot something which tells me otherwise..)

	* smtpserver/policytest.c, smtpserver/mxverify.c:
	    If at MAIL FROM or RCPT TO the address domain is not found