@@ -1,3 +1,10 @@
+1999-12-22  Matti Aarnio  <mea@mea.tmt.tele.fi>
+
+	* lib/selfaddrs.c:
+	    A programming error has lurked here ages -- if system has
+	    more than a few (6-8) IP addresses, previous code failed
+	    to pick *any*.  Cured things so that it will now pick all.
+	
 1999-12-21  Matti Aarnio  <mea@mea.tmt.tele.fi>
 
 	* scheduler/scheduler.h, scheduler/transport.c:
